# rasd-static

./: README.md  config.ini
backend/: .env.example  .gitignore  README.md  build-backend-wrapper.sh  build-backend.sh  pyproject.toml  test-api.sh
backend/lambdas/rasd_fastapi/: __init__.py  handler.py  main.py  utils.py
backend/lambdas/rasd_fastapi/api/: __init__.py  middleware.py
backend/lambdas/rasd_fastapi/api/v1/: __init__.py  api.py
backend/lambdas/rasd_fastapi/api/v1/endpoints/: __init__.py  abn.py  auth.py  health.py  metadata.py  organisations.py  registration.py  requests.py
backend/lambdas/rasd_fastapi/auth/: __init__.py  cognito.py
backend/lambdas/rasd_fastapi/core/: __init__.py  security.py  settings.py
backend/lambdas/rasd_fastapi/crud/: __init__.py  base.py  metadata.py  organisations.py  registration.py  requests.py
backend/lambdas/rasd_fastapi/db/: __init__.py  session.py
backend/lambdas/rasd_fastapi/emails/: __init__.py  email.py  ses.py
backend/lambdas/rasd_fastapi/emails/templates/: base.html  dar_completed.html  dar_created.html  dsr_acknowledged.html  dsr_agreement.html  dsr_approved.html  dsr_completed.html  dsr_created.html  dsr_declined.html  registration_approved.html  registration_created.html  registration_declined.html
backend/lambdas/rasd_fastapi/models/: __init__.py  base.py  metadata.py  organisations.py  registration.py  requests.py
backend/lambdas/rasd_fastapi/models/metadata_vocabs/: __init__.py  access_rights.py  collection_methods.py  formats.py  keywords.py  location.py  locations.py  security_classification.py  security_classifications.py
backend/lambdas/rasd_fastapi/models/requests_vocabs/: __init__.py  access.py  anzsic.py  anzsrc.py  area.py  frequency.py  purposes.py
backend/lambdas/rasd_fastapi/schemas/: __init__.py  abn.py  audit.py  auth.py  base.py  metadata.py  organisations.py  pagination.py  registration.py  requests.py
backend/lambdas/rasd_fastapi/services/: __init__.py  abn.py
backend/lambdas/rasd_fastapi/types/: __init__.py  abn.py  date.py  doi.py  orcid.py  rasd.py
backend/tests/: __init__.py  conftest.py
backend/tests/data/: metadata.json  organisation.json
backend/tests/rasd_fastapi/: __init__.py
backend/tests/rasd_fastapi/crud/: __init__.py  test_metadata.py  test_organisations.py
backend/tests/rasd_fastapi/models/: test_metadata.py  test_organisations.py
backend/tests/rasd_fastapi/services/: __init__.py  test_abn.py
cicd/: dd_notification.sh  slack_notification.sh
frontend/: .env.develop  .env.production  .env.sample  .env.staging  .env.testing  .eslintrc.cjs  README.md  build-frontend.sh  index.html  package-lock.json  package.json  production.json  testing.json  tsconfig.config.json  (+1 more)
(+207 files in other folders)
